docs: add native code isolation analysis and implementation plan to PROCESS_ISOLATION.md
Agent-Logs-Url: https://github.com/pfirmstone/DirtyChai/sessions/1b0f3e81-acdb-4d6b-917e-cb81d7eb6339

Co-authored-by: pfirmstone <11625778+pfirmstone@users.noreply.github.com>